# CryptGuard

./: README.md  live_out.pcap  live_report.json  live_temp.pcap  server.py  start_all.ps1  test_dpi.pcap  test_extension.py  test_report.json
.agents/workflows/: run-project.md
Packet_analyzer/: .env.example  CMakeLists.txt  CMakeSettings.json  HOW_TO_RUN.md  README.md  SHARING_GUIDE.md  TESTING_PROTOCOL.md  api_server.py  api_temp_capture.pcap  api_temp_output.pcap  beacon_detector.py  beacon_history.db  beacon_history.db-shm  beacon_history.db-wal  check_beacons.py  compile_out.txt  debug_malware.py  demo_intel.py  features.txt  generate_malware_traffic.py  intel_cache.db  live_capture.py  live_temp_capture.pcap  manual_test.pcap  model_checker.py  out_test.pcap  out_wifi.pcap  output.pcap  pcap_test.cpp  reputation.db  reputation_engine.py  requirements.txt  run_app.bat  run_siem.bat  run_sim.py  simulate_c2_beacon.py  simulate_dns.py  stats_check.json  temp_capture_a.pcap  temp_capture_a.pcap.out  (+12 more)
Packet_analyzer/include/: dpi_engine.h  md5.h  packet_parser.h  pcap_reader.h  sni_extractor.h  types.h
Packet_analyzer/model/: cryptguard.ipynb  xgb_model.pkl
Packet_analyzer/src/: dpi_engine.cpp  dpi_mt.cpp  engine_main.cpp  main_dpi.cpp  md5.cpp  packet_parser.cpp  pcap_reader.cpp  sni_extractor.cpp  types.cpp
Packet_analyzer/web_ui/: index.html  package-lock.json  package.json
Packet_analyzer/web_ui/src/: App.jsx  index.css
extension/: background.js  manifest.json
extension/popup/: popup.css  popup.html  popup.js
frontend/: package-lock.json  package.json
(+1 files in other folders)
